<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_category_save"
        android:title="@string/pref_category_save">

        <SwitchPreference
            android:defaultValue="false"
            android:key="purify_comment_image"
            android:summary="@string/pref_comment_image_summary"
            android:title="@string/pref_comment_image_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="unlock_comment_emoji"
            android:summary="@string/pref_comment_emoji_summary"
            android:title="@string/pref_comment_emoji_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="download_comment_audio"
            android:summary="@string/pref_comment_audio_summary"
            android:title="@string/pref_comment_audio_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="feed_video_remove_watermark"
            android:summary="@string/pref_feed_video_remove_watermark_summary"
            android:title="@string/pref_feed_video_remove_watermark_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="feed_download_bypass"
            android:summary="@string/pref_feed_download_bypass_summary"
            android:title="@string/pref_feed_download_bypass_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="feed_multi_image_remove_watermark"
            android:summary="@string/pref_feed_multi_image_remove_watermark_summary"
            android:title="@string/pref_feed_multi_image_remove_watermark_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_feed">
        <Preference
            android:key="recommend_feed_filter"
            android:title="@string/recommended_feed_filter_dialog_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_backup"
        android:title="@string/pref_category_backup">
        <Preference
            android:key="export_config"
            android:title="@string/pref_backup_export_title"/>
        <Preference
            android:key="import_config"
            android:title="@string/pref_backup_import_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_misc"
        android:title="@string/pref_category_misc">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_hidden_features"
            android:summary="@string/pref_misc_enable_hidden_features_summary"
            android:title="@string/pref_misc_enable_hidden_features_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_module"
        android:title="@string/pref_category_module">
        <SwitchPreference
            android:defaultValue="true"
            android:key="disable_verbose_logs"
            android:title="@string/pref_module_disable_verbose_logs_title"
            android:summary="@string/pref_module_disable_verbose_logs_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_about"
        android:title="@string/pref_category_about">

        <Preference
            android:key="version"
            android:title="@string/pref_about_version_title"
            android:summary="@string/pref_about_version_summary" />

        <Preference
            android:key="author"
            android:title="@string/pref_about_author_title"
            android:summary="@string/pref_about_author_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/author_url" />
        </Preference>

        <Preference
            android:key="update"
            android:title="@string/pref_about_up_to_date_title"
            android:summary="@string/pref_about_up_to_date_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/latest_release_page_url" />
        </Preference>

        <Preference
            android:key="repository"
            android:title="@string/pref_about_repository_title"
            android:summary="@string/pref_about_repository_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/repository_url" />
        </Preference>

        <Preference
            android:key="telegram"
            android:title="@string/pref_about_telegram_title"
            android:summary="@string/pref_about_telegram_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/telegram_url"/>
        </Preference>

        <Preference
            android:key="build_time"
            android:title="@string/pref_about_build_time_title"
            android:summary="@string/unknown"/>

        <Preference
            android:key="back_then"
            android:title="@string/pref_about_back_then_title"
            android:summary="@string/pref_about_back_then_summary" >
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>